--- a/src/app/monthyearselector/dropdown/dropdown.component.html
+++ b/src/app/monthyearselector/dropdown/dropdown.component.html
@@ -1,11 +1,4 @@
-<div class="dropdown-wrapper">
+<div class="dropdown-wrapper" *ngIf="display">
   <app-year [(year)]="year"></app-year>
   <app-month [dateSelected]="dateSelected" [(month)]="month" [year]="year" (monthChange)="monthChange($event)"></app-month>
-</div>
-
-<div>
-  Year: {{ year }}
-</div>
-<div>
-  Month: {{ month }}
 </div>
