--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,1 @@
-<app-monthyearselector (change)="onChange($event)"></app-monthyearselector>
+<app-monthyearselector [options]="options" (change)="onChange($event)"></app-monthyearselector>
