Disable individual date (year/month)

--- a/src/app/monthyearselector/dropdown/month/month.component.css
+++ b/src/app/monthyearselector/dropdown/month/month.component.css
@@ -19,6 +19,12 @@
 .month-col__inner:hover {
     background-color: #fff;
 }
-.month-col__inner--selected {
+.month-col__inner--selected, .month-col__inner--selected:hover {
+    border: 1px solid #868484;
     background-color: #e2e2e2;
+}
+.month-col__inner--disabled, .month-col__inner--disabled:hover {
+    border: 1px solid #ff0000;
+    cursor: auto;
+    background-color: #ffdfdf;
 }
