--- a/src/app/monthyearselector/dropdown/year/year.component.html
+++ b/src/app/monthyearselector/dropdown/year/year.component.html
@@ -1,13 +1,13 @@
 <div class="year-wrapper">
   <div>
     <a (click)="yearBack()" class="year-nav-link" *ngIf="!options.yearMin || year > options.yearMin">
-      <fa-icon [icon]="['fas', 'caret-square-left']" [fixedWidth]="true"></fa-icon>
+      <span class="arrow arrow--left"></span>
     </a>
   </div>
   <div class="year-label">{{ year }}</div>
   <div>
     <a (click)="yearForward()" class="year-nav-link" *ngIf="!options.yearMax || year < options.yearMax">
-      <fa-icon [icon]="['fas', 'caret-square-right']" [fixedWidth]="true"></fa-icon>
+      <span class="arrow arrow--right"></span>
     </a>
   </div>
 </div>
