--- a/src/app/monthyearselector/dropdown/dropdown.component.css
+++ b/src/app/monthyearselector/dropdown/dropdown.component.css
@@ -2,15 +2,37 @@
     position: absolute;
     border: 1px solid #000;
     border-radius: 5px;
-    border-top-left-radius: 0;
+    /* border-top-left-radius: 0; */
     background-color: #fff;
     box-shadow: 2px 2px #e2d2d2;
     padding: 0.5em;
     width: 200px;
+    margin-top: 10px;
     -webkit-user-select: none; /* Chrome/Safari */        
     -moz-user-select: none; /* Firefox */
     -ms-user-select: none; /* IE10+ */
     /* Rules below not implemented in browsers yet */
     -o-user-select: none;
     user-select: none;
+}
+.dropdown-wrapper:before, .dropdown-wrapper:after {
+    bottom: 100%;
+    border: solid transparent;
+    content: " ";
+    height: 0;
+    width: 0;
+    position: absolute;
+    left: 20px;
+}
+.dropdown-wrapper:before {
+    border-color: rgba(250,250,250,0);
+    border-bottom-color: #000;
+    border-width: 10px;
+    margin-left: -10px;
+}
+.dropdown-wrapper:after {
+    border-color: rgba(250,250,250,0);
+    border-bottom-color: #FAFAFA;
+    border-width: 9px;
+    margin-left: -9px;
 }
