--- a/src/app/monthyearselector/dropdown/dropdown.component.css
+++ b/src/app/monthyearselector/dropdown/dropdown.component.css
@@ -4,10 +4,11 @@
     border-radius: 5px;
     /* border-top-left-radius: 0; */
     background-color: #fff;
-    box-shadow: 2px 2px #e2d2d2;
-    padding: 0.5em;
-    width: 200px;
-    margin-top: 10px;
+    box-shadow: 3px 3px #e2d2d2;
+    padding: 0.5rem;
+    width: 15.5rem;
+    margin-top: 9px;
+    font-size: 1rem;
     -webkit-user-select: none; /* Chrome/Safari */        
     -moz-user-select: none; /* Firefox */
     -ms-user-select: none; /* IE10+ */
@@ -18,11 +19,11 @@
 .dropdown-wrapper:before, .dropdown-wrapper:after {
     bottom: 100%;
     border: solid transparent;
-    content: " ";
+    content: '';
     height: 0;
     width: 0;
     position: absolute;
-    left: 20px;
+    left: 1.25rem;
 }
 .dropdown-wrapper:before {
     border-color: rgba(250,250,250,0);
@@ -35,4 +36,21 @@
     border-bottom-color: #FAFAFA;
     border-width: 9px;
     margin-left: -9px;
+}
+.dropdown-wrapper--open-left {
+    margin-left: -14.5rem;
+}
+.dropdown-wrapper--open-left:before, .dropdown-wrapper--open-left:after {
+    right: 1.25rem !important;
+    left: auto !important;
+}
+.dropdown-wrapper--open-left:before {
+    border-width: 10px;
+    margin-right: -10px;
+    margin-left: auto;
+}
+.dropdown-wrapper--open-left:after {
+    border-width: 9px;
+    margin-right: -9px;
+    margin-left: auto;
 }
