--- a/src/app/monthyearselector/dropdown/month/month.component.css
+++ b/src/app/monthyearselector/dropdown/month/month.component.css
@@ -15,6 +15,7 @@
     padding: 0.5em;
     margin: 0.25em;
     cursor: pointer;
+    font-size: 1rem;
 }
 .month-col__inner:hover {
     background-color: #fff;
@@ -24,7 +25,7 @@
     background-color: #d2d1d1;
 }
 .month-col__inner--disabled, .month-col__inner--disabled:hover {
-    border: 1px solid #ff7272;
+    border: 1px solid #fda4a4;
     background-color: #ffe2e2;
     cursor: not-allowed;
 }
