--- a/src/app/monthyearselector/dropdown/year/year.component.html
+++ b/src/app/monthyearselector/dropdown/year/year.component.html
@@ -1,11 +1,11 @@
 <div class="year-wrapper">
-  <div>
+  <div class="year-nav">
     <a (click)="yearBack()" class="year-nav-link" *ngIf="!options.yearMin || year > options.yearMin">
       <span class="arrow arrow--left"></span>
     </a>
   </div>
   <div class="year-label">{{ year }}</div>
-  <div>
+  <div class="year-nav">
     <a (click)="yearForward()" class="year-nav-link" *ngIf="!options.yearMax || year < options.yearMax">
       <span class="arrow arrow--right"></span>
     </a>
