Dropdown orientation detection based on viewport

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
         dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 </div>
 <div style="margin-bottom: 1rem;">
-        <div style="display: inline-block; font-weight: bold; margin-right: 0.5rem;">Date: Date: Date: Date:</div>
+        <div style="display: inline-block; font-weight: bold; margin-right: 0.5rem;">Date date date:</div>
         <app-monthyearselector [(ngModel)]="dataModel" [options]="options" (change)="onChange($event)"></app-monthyearselector> {{ dataModel | json }}
 </div>
 <div>
