--- a/src/app/monthyearselector/dropdown/dropdown.component.css
+++ b/src/app/monthyearselector/dropdown/dropdown.component.css
@@ -5,16 +5,17 @@
     /* border-top-left-radius: 0; */
     background-color: #fff;
     box-shadow: 3px 3px #e2d2d2;
-    padding: 0.5rem;
-    width: 12rem;
+    padding: 0.5em;
+    width: 12em;
     margin-top: 9px;
-    font-size: 1rem;
+    font-size: 1em;
     -webkit-user-select: none; /* Chrome/Safari */        
     -moz-user-select: none; /* Firefox */
     -ms-user-select: none; /* IE10+ */
     /* Rules below not implemented in browsers yet */
     -o-user-select: none;
     user-select: none;
+    font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
 }
 .dropdown-wrapper:before, .dropdown-wrapper:after {
     bottom: 100%;
@@ -23,7 +24,7 @@
     height: 0;
     width: 0;
     position: absolute;
-    left: 1.25rem;
+    left: 1.25em;
 }
 .dropdown-wrapper:before {
     border-color: rgba(250,250,250,0);
@@ -38,13 +39,13 @@
     margin-left: -9px;
 }
 .dropdown-wrapper--open-left {
-    margin-left: -10.5rem;
+    margin-left: -10.5em;
 }
 .dropdown-wrapper--open-middle {
-    margin-left: -5.25rem;
+    margin-left: -5.25em;
 }
 .dropdown-wrapper--open-left:before, .dropdown-wrapper--open-left:after {
-    right: 1.25rem !important;
+    right: 1.25em !important;
     left: auto !important;
 }
 .dropdown-wrapper--open-left:before, .dropdown-wrapper--open-middle:before {
@@ -58,6 +59,6 @@
     margin-left: auto;
 }
 .dropdown-wrapper--open-middle:before, .dropdown-wrapper--open-middle:after {
-    right: 6.25rem !important;
+    right: 6.25em !important;
     left: auto !important;
 }
