--- a/src/app/monthyearselector/dropdown/month/month.component.css
+++ b/src/app/monthyearselector/dropdown/month/month.component.css
@@ -3,6 +3,8 @@
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
+    font-size: 1em;
+    font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
 }
 .month-col {
     flex: 1 0 33%;
@@ -15,7 +17,7 @@
     padding: 0.5em;
     margin: 0.25em;
     cursor: pointer;
-    font-size: 1rem;
+    font-size: 1em;
 }
 .month-col__inner:hover {
     background-color: #fff;
