--- a/src/app/monthyearselector/monthyearselector.component.css
+++ b/src/app/monthyearselector/monthyearselector.component.css
@@ -1,3 +1,5 @@
 .monthyearselector-wrapper {
     display: inline-block;
+    font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+    font-size: 1.2rem;
 }
