--- a/src/app/monthyearselector/textinput/textinput.component.html
+++ b/src/app/monthyearselector/textinput/textinput.component.html
@@ -1,1 +1,1 @@
-<input type="text" readonly [value]="value()" [disabled]="options.disabled">
+<input type="text" readonly [value]="value()" [disabled]="options.disabled" [placeholder]="placeholder ? placeholder : ''">
