--- a/src/app/monthyearselector/monthyearselector.component.html
+++ b/src/app/monthyearselector/monthyearselector.component.html
@@ -1,4 +1,4 @@
 <div class="monthyearselector-wrapper">
-    <app-textinput [options]="options" [dateSelected]="dateSelected" (click)="textInputClick($event)" (blur)="onTouchedCallback($event)"></app-textinput>
+    <app-textinput [placeholder]="placeholder" [options]="options" [dateSelected]="dateSelected" (click)="textInputClick($event)" (blur)="onTouchedCallback($event)"></app-textinput>
     <app-dropdown [options]="options" [dateSelected]="dateSelected" (selected)="onDateSelected($event)" [(display)]="dropdownToggled"></app-dropdown>
 </div>
