Demos for yearMax, yearMin, disabled, and closeOnSelect options

--- a/src/app/monthyearselector/monthyearselector.component.html
+++ b/src/app/monthyearselector/monthyearselector.component.html
@@ -2,3 +2,4 @@
     <app-textinput [placeholder]="placeholder" [options]="options" [dateSelected]="dateSelected" (click)="textInputClick($event)" (blur)="onTouchedCallback($event)"></app-textinput>
     <app-dropdown [options]="options" [dateSelected]="dateSelected" (selected)="onDateSelected($event)" [(display)]="dropdownToggled"></app-dropdown>
 </div>
+Options MYS: {{ options | json }}
