--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,11 +24,27 @@
                         <div>
                                 <div>
                                         <input type="checkbox" formControlName="maxEnabled" name="maxEnabled" id="maxEnabled"> 
-                                        <label for="maxEnabled">Max: <input type="number" style="width: 100px;" formControlName="max" name="max"></label>
+                                        <label for="maxEnabled">yearMax: <input type="number" style="width: 100px;" formControlName="max" name="max"></label>
+                                </div>
+                                <div>
+                                        <input type="checkbox" formControlName="minEnabled" name="minEnabled" id="minEnabled"> 
+                                        <label for="minEnabled">yearMin: <input type="number" style="width: 100px;" formControlName="min" name="min"></label>
+                                </div>
+                                <div>
+                                        <input type="checkbox" formControlName="inputDisabled" name="inputDisabled" id="inputDisabled"> 
+                                        <label for="inputDisabled">disabled</label>
+                                </div>
+                                <div>
+                                        <input type="checkbox" formControlName="closeOnSelect" name="closeOnSelect" id="closeOnSelect"> 
+                                        <label for="closeOnSelect">closeOnSelect</label>
                                 </div>
                         </div>
                         <div><button type="submit" [disabled]="!sampleForm.valid">Submit</button></div>
                 </form>
+        </div>
+        <div style="margin-bottom: 1rem;">
+                <div style="font-weight: bold;">Picker Options:</div>
+                {{ options | json }}
         </div>
         <div>
                 <div style="font-weight: bold;">Form State:</div>
