--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
   <div class="navbar-brand">ngx-month-year-selector</div>
-  <div class="d-inline ml-auto">
+  <div class="ml-auto d-none d-sm-inline">
     <a href="https://github.com/crankedapps/ngx-month-year-selector" class="btn btn-outline-success">GitHub</a>
   </div>
 </nav>
