--- a/projects/ngx-month-year-selector/src/lib/components/dropdown/dropdown.component.sass
+++ b/projects/ngx-month-year-selector/src/lib/components/dropdown/dropdown.component.sass
@@ -1,64 +1,27 @@
 .dropdown-wrapper
     position: absolute
-    border: 1px solid #000
-    border-radius: 5px
-    /* border-top-left-radius: 0 */
+    box-shadow: 0 2px 4px -1px rgba(0,0,0,.2), 0 4px 5px 0 rgba(0,0,0,.14), 0 1px 10px 0 rgba(0,0,0,.12)
     background-color: #fff
-    box-shadow: 3px 3px #e2d2d2
-    padding: 0.5em
-    width: 12em
+    padding: .5em
+    width: 300px
     margin-top: 9px
-    font-size: 1em
+    font-size: 1rem
     z-index: 999
-     /* Chrome/Safari */
     -webkit-user-select: none
-     /* Firefox */   
     -moz-user-select: none
-    /* IE10+ */
     -ms-user-select: none
     -o-user-select: none
     user-select: none
     font-family: -apple-system,vBlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji"
-    &:before, &:after
-        bottom: 100%
-        border: solid transparent
-        content: ''
-        height: 0
-        width: 0
-        position: absolute
-        left: 1.25em
-    &:before
-        border-color: rgba(250,250,250,0)
-        border-bottom-color: #000
-        border-width: 10px
-        margin-left: -10px
-    &:after
-        border-color: rgba(250,250,250,0)
-        border-bottom-color: #fff
-        border-width: 9px
-        margin-left: -9px
-    &.dropdown-wrapper--open-left
-        margin-left: -10.5em
-        &:before, &:after
-            right: 1.25em !important
-            left: auto !important
-        &:before
-            border-width: 10px
-            margin-right: -10px
-            margin-left: auto
-        &:after
-            border-width: 9px
-            margin-right: -9px
-            margin-left: auto
-    &.dropdown-wrapper--open-middle
-        margin-left: -5.25em
-        &:before, &:after
-            margin-left: auto
-            right: 6.25em !important
-            left: auto !important
-        &:before
-            border-width: 10px
-            margin-right: -10px
-        &:after
-            border-width: 9px
-            margin-right: -9px
+
+.dropdown-divider
+    border-top: 1px solid rgba(0,0,0,.12)
+    margin-bottom: 10px
+
+/* Extra small devices (portrait phones, less than 576px) */
+@media (max-width: 575.98px)
+    .dropdown-wrapper
+        position: fixed
+        bottom: 0
+        left: 0 !important
+        width: 100%
