--- a/src/app/demos/reactiveformdemo/reactiveformdemo.component.html
+++ b/src/app/demos/reactiveformdemo/reactiveformdemo.component.html
@@ -1,82 +1,68 @@
 <div>
   <div class="row">
     <div class="col-md-8 col-formdemo">
-      <form [formGroup]="sampleForm" (ngSubmit)="onSubmit()">
+      <form [formGroup]="sampleForm" (ngSubmit)="onSubmit()" class="mb-3">
         <div class="form-group">
-          <label for="name">Your Name</label>
-          <input class="form-control" placeholder="Name" formControlName="name" name="name" id="name">
+          <label for="name">Your Name <small>(required)</small></label>
+          <input class="form-control" placeholder="Name" formControlName="name" name="name" id="name"
+            [class.is-invalid]="sampleForm.controls.name.touched && !sampleForm.controls.name.valid">
           <small class="form-text text-danger" *ngIf="!sampleForm.controls['name'].valid && sampleForm.controls['name'].errors.minlength">
             Minimum length of 2 characters.
           </small>
         </div>
         <div class="form-group">
-          <label for="monthYear">Date</label>
+          <label for="monthYear">Date <small>(required)</small></label>
           <input class="form-control" placeholder="Enter date" [ngxMonthYearSelector]="options" formControlName="monthYear"
-            name="monthYear" id="monthYear" autocomplete="off">
+            name="monthYear" id="monthYear" [class.is-invalid]="sampleForm.controls.monthYear.touched && !sampleForm.controls.monthYear.valid"
+            autocomplete="off">
         </div>
-        <form [formGroup]="optionsForm">
-          <div>Option Properties</div>
-          <div class="check-item">
-            <input type="checkbox" formControlName="maxEnabled" name="maxEnabled" id="maxEnabled">
-            <label for="maxEnabled">
-              yearMax: <input class="form-control d-inline" type="number" style="width: 100px;" formControlName="max"
-                name="max">
-            </label>
-          </div>
-          <div class="check-item">
-            <input type="checkbox" formControlName="minEnabled" name="minEnabled" id="minEnabled">
-            <label for="minEnabled">
-              yearMin: <input class="form-control d-inline" type="number" style="width: 100px;" formControlName="min"
-                name="min">
-            </label>
-          </div>
-          <div class="check-item">
-            <input type="checkbox" formControlName="inputDisabled" name="inputDisabled" id="inputDisabled">
-            <label for="inputDisabled">disabled: {{ optionsForm.controls.inputDisabled.value }}</label>
-          </div>
-          <div class="check-item">
-            <input type="checkbox" formControlName="closeOnSelect" name="closeOnSelect" id="closeOnSelect">
-            <label for="closeOnSelect">closeOnSelect: {{ options.closeOnSelect }}</label>
-          </div>
-          <div class="check-item">
-            <input type="checkbox" formControlName="forceOpenDirectionEnabled" name="forceOpenDirectionEnabled" id="forceOpenDirectionEnabled">
-            <label for="forceOpenDirectionEnabled">
-              <div class="d-flex align-items-center">
-                <div class="mr-1">forceOpenDirection:</div>
-                <div>
-                  <select class="form-control d-inline" formControlName="forceOpenDirection" name="forceOpenDirection">
-                    <option value="left">left</option>
-                    <option value="right">right</option>
-                    <option value="middle">middle</option>
-                    <option [value]="null">auto (null)</option>
-                  </select>
-                </div>
-              </div>
-            </label>
-          </div>
-          <div class="check-item">
-            <input type="checkbox" formControlName="formatEnabled" name="formatEnabled" id="formatEnabled">
-            <label for="formatEnabled">
-              <div class="d-flex align-items-center">
-                <div class="mr-1">format:</div>
-                <div>
-                  <select class="form-control" formControlName="format" name="format">
-                    <option value="mmm yyyy">mmm yyyy</option>
-                    <option value="mmmm yyyy">mmmm yyyy</option>
-                    <option value="yyyy-mm">yyyy-mm</option>
-                    <option value="mm-yy">mm-yy</option>
-                    <option value="yyyy">yyyy</option>
-                    <option value="yy">yy</option>
-                    <option value="mmmm">mmmm</option>
-                    <option value="mmm">mmm</option>
-                    <option value="mm">mm</option>
-                  </select>
-                </div>
-              </div>
-            </label>
-          </div>
-        </form>
         <div><button type="submit" class="btn btn-primary" [disabled]="!sampleForm.valid">Submit</button></div>
+      </form>
+      <form [formGroup]="optionsForm">
+        <div>Option Properties</div>
+        <div class="check-item">
+          <input type="checkbox" formControlName="maxEnabled" name="maxEnabled" id="maxEnabled">
+          <label for="maxEnabled">
+            yearMax: <input class="form-control d-inline" type="number" style="width: 100px;" formControlName="max"
+              name="max">
+          </label>
+        </div>
+        <div class="check-item">
+          <input type="checkbox" formControlName="minEnabled" name="minEnabled" id="minEnabled">
+          <label for="minEnabled">
+            yearMin: <input class="form-control d-inline" type="number" style="width: 100px;" formControlName="min"
+              name="min">
+          </label>
+        </div>
+        <div class="check-item">
+          <input type="checkbox" formControlName="inputDisabled" name="inputDisabled" id="inputDisabled">
+          <label for="inputDisabled">disabled: {{ optionsForm.controls.inputDisabled.value }}</label>
+        </div>
+        <div class="check-item">
+          <input type="checkbox" formControlName="closeOnSelect" name="closeOnSelect" id="closeOnSelect">
+          <label for="closeOnSelect">closeOnSelect: {{ options.closeOnSelect }}</label>
+        </div>
+        <div class="check-item">
+          <input type="checkbox" formControlName="formatEnabled" name="formatEnabled" id="formatEnabled">
+          <label for="formatEnabled">
+            <div class="d-flex align-items-center">
+              <div class="mr-1">format:</div>
+              <div>
+                <select class="form-control" formControlName="format" name="format">
+                  <option value="mmm yyyy">mmm yyyy</option>
+                  <option value="mmmm yyyy">mmmm yyyy</option>
+                  <option value="yyyy-mm">yyyy-mm</option>
+                  <option value="mm-yy">mm-yy</option>
+                  <option value="yyyy">yyyy</option>
+                  <option value="yy">yy</option>
+                  <option value="mmmm">mmmm</option>
+                  <option value="mmm">mmm</option>
+                  <option value="mm">mm</option>
+                </select>
+              </div>
+            </div>
+          </label>
+        </div>
       </form>
     </div>
     <div class="col-md-4">
